--- a/load_balancer_setup/web_server/tasks/main.yml
+++ b/load_balancer_setup/web_server/tasks/main.yml
@@ -10,7 +10,7 @@
   copy:
     content: "{{ web_page_content }}"  # Use variable for the content of the web page
     dest: "{{ web_page_dest }}"  # Use variable for the destination path of the web page
-  notify: "Restart HAProxy"  # Trigger the handler to restart HAProxy, if there are any changes in web page 
+  notify: "Restart HTTPD"  # Trigger the handler to restart HAProxy, if there are any changes in web page 
 
 - name: "Ensure HTTPD Service is Running"
   service:
